jboss-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jboss
  labels:
    argocd.argoproj.io/managed-by=openshift-gitops
