jboss-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jboss
  name: jboss
  namespace: jboss
spec:
  revisionHistoryLimit: 0
  replicas: 0
  selector:
    matchLabels:
      app: jboss
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jboss
    spec:
      containers:
      - image: registry.redhat.io/jboss-eap-7/eap74-openjdk8-openshift-rhel8
        name: jboss
        resources: {}
---
