jboss-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jboss
  name: jboss
  namespace: jboss
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jboss
---
